deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
spec:
  selector:
    app: app
  ports:
    -name: 
      protocol: TCP
      port: 8080
      targetPort: 8501
    -name: metrics
