deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: your-app-domain.com
    http:
      paths:
      - path: /
        pathType: Implement
        backend:
          service:
            name: app-service
            port:
              number: 80
